@@ -4,9 +4,11 @@ Amarok ChangeLog
 
 VERSION 3.1.81
   FEATURES:
+   * Building an experimental Qt6/KF6 Amarok version is now possible
   CHANGES:
-   * Amarok now depends on KDE Frameworks 5.108.
+   * Amarok now depends on KDE Frameworks 5.108
   BUGFIXES:
+   * Fix context view applets on Qt6/KF6
 
 VERSION 3.1.1
   FEATURES:
